<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_main_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_benefit_birth_control"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="6dp"
            android:drawableTop="@drawable/icon_benefit_birth_control"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/benefit_birth_control"
            android:textColor="@color/color_text_caption"
            android:textSize="@dimen/t12" />

        <TextView
            android:id="@+id/tv_benefit_marry"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="6dp"
            android:drawableTop="@drawable/icon_benefit_marry"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/benefit_marry"
            android:textColor="@color/color_text_caption"
            android:textSize="@dimen/t12" />

        <TextView
            android:id="@+id/tv_benefit_medical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="6dp"
            android:drawableTop="@drawable/icon_benefit_medical"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/benefit_medical"
            android:textColor="@color/color_text_caption"
            android:textSize="@dimen/t12" />

        <TextView
            android:id="@+id/tv_benefit_rescue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="6dp"
            android:drawableTop="@drawable/icon_benefit_rescue"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/benefit_help"
            android:textColor="@color/color_text_caption"
            android:textSize="@dimen/t12" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_benefit_security"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="6dp"
            android:drawableTop="@drawable/icon_benefit_security"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/benefit_security"
            android:textColor="@color/color_text_caption"
            android:textSize="@dimen/t12" />

        <TextView
            android:id="@+id/tv_benefit_death"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="6dp"
            android:drawableTop="@drawable/icon_benefit_death"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/benefit_death"
            android:textColor="@color/color_text_caption"
            android:textSize="@dimen/t12" />

        <TextView
            android:id="@+id/tv_benefit_pension"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="6dp"
            android:drawableTop="@drawable/icon_benefit_pension"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/benefit_pension"
            android:textColor="@color/color_text_caption"
            android:textSize="@dimen/t12" />

        <TextView
            android:id="@+id/tv_benefit_military"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="6dp"
            android:drawableTop="@drawable/icon_benefit_military"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/benefit_military_service"
            android:textColor="@color/color_text_caption"
            android:textSize="@dimen/t12" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_benefit_land"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="6dp"
            android:drawableTop="@drawable/icon_benefit_land"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/benefit_land"
            android:textColor="@color/color_text_caption"
            android:textSize="@dimen/t12" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:drawablePadding="6dp"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:textColor="@color/color_text_caption"
            android:textSize="@dimen/t12" />

    </LinearLayout>

</LinearLayout>