<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_main_background"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tv_social_prevent_forest_fire"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawablePadding="6dp"
        android:drawableTop="@drawable/icon_social_prevent_forest_fire"
        android:gravity="center"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:text="@string/social_prevent_forest_fire"
        android:textColor="@color/color_text_caption"
        android:textSize="@dimen/t12" />

    <TextView
        android:id="@+id/tv_social_prevent_flood"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawablePadding="6dp"
        android:drawableTop="@drawable/icon_social_prevent_flood"
        android:gravity="center"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:text="@string/social_prevent_flood"
        android:textColor="@color/color_text_caption"
        android:textSize="@dimen/t12" />

    <TextView
        android:id="@+id/tv_social_prevent_snow_removal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawablePadding="6dp"
        android:drawableTop="@drawable/icon_social_prevent_snow_removal"
        android:gravity="center"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:text="@string/social_prevent_snow_removal"
        android:textColor="@color/color_text_caption"
        android:textSize="@dimen/t12" />

    <TextView
        android:id="@+id/tv_social_prevent_sacrifice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawablePadding="6dp"
        android:drawableTop="@drawable/icon_social_prevent_sacrifice"
        android:gravity="center"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:text="@string/social_prevent_sacrifice"
        android:textColor="@color/color_text_caption"
        android:textSize="@dimen/t12" />

</LinearLayout>