<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_main_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_report"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="6dp"
            android:drawableTop="@drawable/icon_case_report"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/case_report"
            android:textColor="@color/color_text_caption"
            android:textSize="@dimen/t12" />

        <TextView
            android:id="@+id/tv_handle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="6dp"
            android:drawableTop="@drawable/icon_case_rehandle"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/case_handle"
            android:textColor="@color/color_text_caption"
            android:textSize="@dimen/t12" />

        <TextView
            android:id="@+id/tv_verify"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="1px"
            android:layout_weight="1"
            android:drawablePadding="6dp"
            android:drawableTop="@drawable/icon_case_verify"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/case_verify"
            android:textColor="@color/color_text_caption"
            android:textSize="@dimen/t12" />

        <TextView
            android:id="@+id/tv_check"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="6dp"
            android:drawableTop="@drawable/icon_case_check"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/case_check"
            android:textColor="@color/color_text_caption"
            android:textSize="@dimen/t12" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_inquiry"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="6dp"
            android:drawableTop="@drawable/icon_case_inquiry"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/case_inquiry"
            android:textColor="@color/color_text_caption"
            android:textSize="@dimen/t12" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text=""
            android:textColor="@color/color_text_caption"
            android:textSize="@dimen/t12" />

    </LinearLayout>

</LinearLayout>